--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="Enter City Name" spellcheck="false">
-            <button><img src="search.png" alt=""></button>
+            <button><img src="Images/search.png" alt=""></button>
         </div>
         <div class="error">
             <p>Invalid City Name</p>
         </div>
         <div class="weather">
-            <img src="rain.png" class="weather-icon">
+            <img src="Images/rain.png" class="weather-icon">
             <h1 class="temp">22°c</h1>
             <h2 class="city">New York</h2>
             <div class="details">
                 <div class="col">
-                    <img src="humidity.png" alt="">
+                    <img src="Images/humidity.png" alt="">
                     <div>
                         <p class="humidity">50%</p>
                         <p>Humidity</p>
                     </div>
                 </div>
                 <div class="col">
-                    <img src="wind.png" alt="">
+                    <img src="Images/wind.png" alt="">
                     <div>
                         <p class="wind">15 km/h</p>
                         <p>Wind Speed</p>
